Bug with visible header has been resolved

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -73,7 +73,7 @@
       width: 40%;
     }
 
-    &-item {
+    .header__item {
       width: 55%;
 
       & > .menu__button-wrap {
