--- a/styles.css
+++ b/styles.css
@@ -407,30 +407,30 @@ input {
   .header__container .header__item:first-child {
     width: 40%;
   }
-  .header__container-item {
+  .header__container .header__item {
     width: 55%;
   }
-  .header__container-item > .menu__button-wrap {
+  .header__container .header__item > .menu__button-wrap {
     display: none;
   }
-  .header__container-item > .menu__button-nav {
+  .header__container .header__item > .menu__button-nav {
     font-family: "Righteous", sans-serif;
     display: flex;
     justify-content: space-between;
     width: 100%;
     height: 100%;
   }
-  .header__container-item > .menu__button-nav .menu__button-nav-box {
+  .header__container .header__item > .menu__button-nav .menu__button-nav-box {
     display: flex;
     width: 70%;
     justify-content: space-between;
     align-items: center;
   }
-  .header__container-item > .menu__button-nav .menu__button-nav-box-item {
+  .header__container .header__item > .menu__button-nav .menu__button-nav-box-item {
     font-size: 1rem;
     color: rgb(255, 255, 255);
   }
-  .header__container-item > .menu__button-nav .menu__button-nav-box-item:hover {
+  .header__container .header__item > .menu__button-nav .menu__button-nav-box-item:hover {
     text-decoration: underline;
     text-decoration-color: rgb(226, 83, 0);
     text-underline-offset: 5px;
